@@ -136,6 +136,9 @@ mjb.imageRetryCount=3
 # Append the run date to the log file to create a unique log file for each run
 mjb.appendDateToLogFile=false
 
+# Append the library.xml file name to the log filename
+mjb.appendLibraryToLogFile=false
+
 # Insert the current date/time to the start of each log message
 mjb.logTimeStamp=false
 
