@@ -30,6 +30,7 @@ MovieJukebox 2.1 BETA
   - Fixed defect #1552 KinoPoisk's plugin has problems when filename contains dash (-)
   - Enhancement  #1557 MovieJukebox-listing.csv file should be configurable
   - Enhancement  #1559 It's useful to have amount of set's elements in XML
+  - Enhancement  #1575 Append library description to the log filename
   
 MovieJukebox 2.0
 ----------------
